package kr.hhplus.concert.domain.model;

public record Concert (
     Long id,
     String name,
     String description
){}
