erDiagram
    Queue ||--o{ Reservation : has

    Queue {
        int id PK
        long userId FK
        string token
        datetime expiredAt
        enum status "ACTIVE | WAITING | EXPIRED"
        datetime enteredAt
    }

    Concert ||--o{ Schedule : has
    Concert {
        long id PK
        string name
        string description
    }

    Schedule ||--o{ Seat : has
    Schedule {
        int id PK
        long concertId FK
        date scheduleDate
        time startTime
    }

    Seat ||--o{ Reservation : has
    Seat {
        int id PK
        int concertId FK
        int seatNumber
        float price
        enum status "AVAILABLE | PENDING | RESERVED "
    }

    Reservation ||--o{ Payment : has
    Reservation {
        int id PK
        int userId FK
        int seatId FK
        int paymentId FK
        datetime reservedAt
        datetime expiredAt
    }

    Payment {
        int id PK
        int userId FK
        float balance
        datetime processedAt
    }

